Möglichkeit, Fehler zu melden explizit erwähnt
Ich habe die Formulierung auf der Startseite mal ein wenig ausgebaut
und die Möglichkeiten erwähnt. Vielleicht fühlt sich der Leser ja
bemüßigt ...

git-svn-id: https://svn.lug-jena.de/uni-skripte@2830 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/index.html
+++ b/web/index.html
@@ -19,11 +19,20 @@
 <p>
   Mittlerweile sind schon ein paar Skripte vorhanden. Einige sind nur zu
   Teilen, andere sind vollständig aber dafür sind noch Probleme beim
-  Übersetzen. Aber das alles soll auch nur ein Anfang sein. Wir hoffen,
+  Übersetzen. Die <a href="status.html">Statusübersicht</a> zeigt
+  euch, wo es noch was zu tun gibt (rot) und welche problemlos
+  angezeigt werden können. Wir hoffen,
   dass sich weitere Studenten finden, die Skripte verbessern, sei es in
   Bezug auf den Inhalt, Vollständigkeit oder den LaTeX-Satz. Leider sind
   vereinzelt auch noch Fehler versteckt, sowohl inhaltliche als auch
-  orthographische.
+  orthographische. Wenn du daher Fehler findest oder Anregungen zur
+  Verbesserung hast, scheue dich nicht, einen Kommentar zu
+  hinterlassen. Jede Skriptseite hat ein Formular, wo du einfach einen
+  Eintrag hinterlassen kannst. Bei längeren Änderungen empfiehlt sich
+  vielleicht eher eine <a href="kontakt.html">E-Mail</a>. Wenn du
+  schließlich der Meinung bist, selbst Hand anlegen zu wollen, frage
+  uns nach einem Zugang. In der Regel erhälst du nach wenigen Tagen
+  deinen Zugangscode und kannst nach Lust und Laune ändern.
 <p>
 
 <p>
