Doppel-Quote in HTML-Tags
git-svn-id: https://svn.lug-jena.de/uni-skripte@2831 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/index.html
+++ b/web/index.html
@@ -37,19 +37,19 @@
 
 <p>
   Zum Schreiben der Skripte verwenden wir
-  <a href='http://www.latex-project.org/'>LaTeX</a>. Hinweise zur Form und
+  <a href="http://www.latex-project.org/">LaTeX</a>. Hinweise zur Form und
   eine Vorlage zum Schreiben neuer Skripte findet man unter
-  <a href='form.html'>Dokumentation</a>.
+  <a href="form.html">Dokumentation</a>.
 </p>
 
 <p>
   Es gestaltet sich schwierig, Änderungen von verschiedenen Benutzern von
   Hand einzupflegen. Für diese Aufgabe hat man sogenannte
-  <a href='http://de.wikipedia.org/wiki/Versionsverwaltung'>Versions-Managment-Programme</a>
+  <a href="http://de.wikipedia.org/wiki/Versionsverwaltung">Versions-Managment-Programme</a>
   entwickelt, die sich darum kümmern, dass Änderungen zweier Benutzer
   nicht im Konflikt zueinander stehen oder dass alle Benutzer auch die
   Änderungen der anderen Benutzer erhalten. Wir verwenden
-  <a href='http://subversion.tigris.org/'>Subversion</a>.
+  <a href="http://subversion.tigris.org/">Subversion</a>.
 </p>
 
 <p>
@@ -65,8 +65,8 @@
 
 <p>
   Wie man Subversion verwendet, wird in der
-  <a href='svn.html'>Dokumentation</a> erläutert. Dort gibt es auch eine
-  Erklärung für <a href='windows.html'>Windows</a>.
+  <a href="svn.html">Dokumentation</a> erläutert. Dort gibt es auch eine
+  Erklärung für <a href="windows.html">Windows</a>.
 </p>
 
 <h2>Die Frage nach dem &bdquo;Warum&ldquo;</h2>
