Beispielskript besser verlinkt
In form.html habe ich einen Anker ausgeworfen und den in index.html verlinkt.
So sollte der Leser schneller zu dem Beispielskript finden.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2832 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/index.html
+++ b/web/index.html
@@ -36,9 +36,9 @@
 <p>
 
 <p>
-  Zum Schreiben der Skripte verwenden wir
+  Zum Schreiben der Skripte verwenden wir das Textsatzsystem
   <a href="http://www.latex-project.org/">LaTeX</a>. Hinweise zur Form und
-  eine Vorlage zum Schreiben neuer Skripte findet man unter
+  eine <a href="form.html#beispielskript">Vorlage zum Schreiben neuer Skripte</a> findet man unter
   <a href="form.html">Dokumentation</a>.
 </p>
 
