--- a/web/form.html
+++ b/web/form.html
@@ -56,7 +56,7 @@
   achten. Es hat sich ergeben, daß die pdf-Anteile der Bilder um 90° verdreht
   werden, wenn man mit xfig-Version &lt; 3.2.5 arbeitet.</li>
 
-<li>Jedes Dokument <b>muss</b> eine Erklärung über die Verwendbarkeit des
+<li><a name="beispielskript"></a>Jedes Dokument <b>muss</b> eine Erklärung über die Verwendbarkeit des
   Dokuments (Lizenz) und Möglichkeiten zur Kontaktaufnahme beinhalten. Als
   Vorlage dafür kann das Vorwort aus dem
   <a href="http://svn.lug-jena.de/uni-skripte/vorlage/skript.ltx?view=markup">Beispielskript</a>
