Absatz zu Versionsverwaltung überarbeitet
git-svn-id: https://svn.lug-jena.de/uni-skripte@2833 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/index.html
+++ b/web/index.html
@@ -42,15 +42,17 @@
   <a href="form.html">Dokumentation</a>.
 </p>
 
-<p>
-  Es gestaltet sich schwierig, Änderungen von verschiedenen Benutzern von
-  Hand einzupflegen. Für diese Aufgabe hat man sogenannte
-  <a href="http://de.wikipedia.org/wiki/Versionsverwaltung">Versions-Managment-Programme</a>
-  entwickelt, die sich darum kümmern, dass Änderungen zweier Benutzer
-  nicht im Konflikt zueinander stehen oder dass alle Benutzer auch die
-  Änderungen der anderen Benutzer erhalten. Wir verwenden
-  <a href="http://subversion.tigris.org/">Subversion</a>.
-</p>
+<p>Es ist angedacht, dass viele Studenten an einem Skript
+  arbeiten. Dabei kann es natürlich passieren, dass Änderungen in
+  Konflikt miteinander stehen. Um derartige Konflikte besser
+  aufzulösen und bei falschen Änderungen leicht wieder auf eine ältere
+  Version zu wechseln, setzen wir eine <a
+  href="http://de.wikipedia.org/wiki/Versionsverwaltung">Versionsverwaltung</a>
+  ein. Im speziellen ist das <a
+  href="http://subversion.tigris.org/">Subversion</a>. Die Software
+  unterstützt die gemeinsame Bearbeitung der Dokumente und kümmert
+  sich auch darum, dass ihr die PDF- bzw. PostScript-Dokumente
+  herunterladen könnt.</p>
 
 <p>
   Diese Programme schützen natürlich nicht vor Sabotage oder davor neue
