Absatz mit der Sabotage umformuliert
Die Nutzer können derzeit nahezu keine Sabotage anrichten. Daher muss
auch nicht so plakativ gewarnt werden. Ich habe versucht, den Absatz
etwas "freundlicher" zu gestalten. Bringen wird es whs. trotzdem
nichts ...

git-svn-id: https://svn.lug-jena.de/uni-skripte@2834 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/index.html
+++ b/web/index.html
@@ -58,18 +58,25 @@
   Diese Programme schützen natürlich nicht vor Sabotage oder davor neue
   Fehler in die Dokumente einzupflegen (es wäre zu schön, wenn ein
   Programm erkennen kann, ob ein Text inhaltlich korrekt ist :). Daher
-  appellieren wir an die soziale Kompetenz der Leute! Die Skripte sind
-  alle kostenlos und ohne Verpflichtungen verfügbar. Es sollte also
-  keiner einen Grund haben, die Skripte absichtlich zu schädigen. Aber
-  denoch eine kleine Drohung: Es kann jeder jederzeit nachvollziehen, wer
-  welche Änderungen gemacht hat (svn diff oder svn log).
+  appellieren wir an eure Aufmerksamkeit. Wer einen Fehler entdeckt,
+  sollte diesen melden. Damit der Spruch von Linus Torvalds auch in
+  diesem Projekt seine Gültigkeit zeigen kann:
 </p>
 
+<blockquote
+cite="http://en.wikiquote.org/wiki/Linus_Torvalds"><p>Given enough
+eyeballs, all bugs are shallow.</p></blockquote>
+
+<p>Auf gut Deutsch: Wenn es genügend kritische Leser gibt, so ist das
+Dokument bald komplett fehlerfrei. :-)</p>
+
+<!--
 <p>
   Wie man Subversion verwendet, wird in der
   <a href="svn.html">Dokumentation</a> erläutert. Dort gibt es auch eine
   Erklärung für <a href="windows.html">Windows</a>.
 </p>
+-->
 
 <h2>Die Frage nach dem &bdquo;Warum&ldquo;</h2>
 
