kbd-Tags eingebaut
git-svn-id: https://svn.lug-jena.de/uni-skripte@2835 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/skripte.html
+++ b/web/skripte.html
@@ -63,13 +63,13 @@ else:
 
 Die erste lokale Kopie wird mit folgendem Befehl erstellt:
 
-<pre>svn checkout https://svn.lug-jena.de/uni-skripte/<tal:id content="script_id" /></pre>
+<pre><kbd>svn checkout https://svn.lug-jena.de/uni-skripte/<tal:id content="script_id" /></kbd></pre>
 
 Später wird die lokale Kopie mit folgendem Befehl aktualisiert (in dem lokalen Verzeichnis <tt tal:content="script_id" />):
-<pre>svn update</pre>
+<pre><kbd>svn update</kbd></pre>
 
 Eigene Änderungen können mit dem folgenden Befehl auf den Server übertragen werden (in dem lokalen Verzeichnis <tal:id content="script_id" />):
-<pre>svn commit</pre>
+<pre><kbd>svn commit</kbd></pre>
 
 <p tal:condition="not:script_id_given">
   Die Windowsanleitung ist <a href="windows.html">hier.</a>
