Verwendung von UTF-8 erwähnt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2892 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/form.html
+++ b/web/form.html
@@ -4,11 +4,11 @@
   <a href="http://www.pps.jussieu.fr/~beffara/soft/rubber/">rubber</a>
   übersetzen lassen</li>
 
-<li>Die Dokumente sind fast alle mit <tt>latin1</tt>-Codierung geschrieben. Dies
-  sollte auch fortgeführt werden, wenn es nicht zu Problemen mit anderen
-  Plattformen kommt, da man sonst Probleme im Umgang mit \verb bekommt und
-  auch die Werkzeuge zur Bearbeitung keine Unterstützung dafür bieten
-  (angepasstes Suchen/Ersetzen,&nbsp;...)</li>
+<li>Die Dokumente sind entweder mit <tt>latin1</tt>- oder mit
+  <tt>UTF-8</tt>-Codierung geschrieben. Die Vorlage verwendet ebenso
+  UTF-8. Falls dein Editor oder dein Betriebssystem kein UTF-8
+  beherrscht, sage uns Bescheid. Wir können die Vorlage leicht in die
+  vorher verwendete Codierung ändern.</li>
 
 <li>Als Dokumentklasse hat sich <tt>scrreprt</tt> als günstig erwiesen, da das
   Skript schon die Ausmaße eines Buches annimmt, aber <tt>scrbook</tt> nicht die
