HTML-Tags angepasst und andere Fehler korrigiert
Aus meiner Sicht passten an einigen Stellen andere HTML-Tags als <tt>
besser. Daher habe ich die korrigiert. Weiterhin wurden ein paar Sätze
ausformuliert und Pakete direkt verlinkt.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2893 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/form.html
+++ b/web/form.html
@@ -10,12 +10,14 @@
   beherrscht, sage uns Bescheid. Wir können die Vorlage leicht in die
   vorher verwendete Codierung ändern.</li>
 
-<li>Als Dokumentklasse hat sich <tt>scrreprt</tt> als günstig erwiesen, da das
-  Skript schon die Ausmaße eines Buches annimmt, aber <tt>scrbook</tt> nicht die
-  passende Klasse dafür ist. Als Option sollte "twoside" gesetzt werden.</li>
+<li>Als Dokumentklasse hat sich <var>scrreprt</var> als günstig erwiesen, da das
+  Skript schon die Ausmaße eines Buches annimmt, aber <var>scrbook</var> nicht die
+  passende Klasse dafür ist. Als Option sollte <var>twoside</var> gesetzt werden.</li>
 
-<li>Als <tt>pagestyle</tt> finde ich "<tt>headings</tt>" gut, da im Seitenkopf das Kapitel
-  und der Abschnitt stehen. <tt>\pagestyle{headings}</tt></li>
+<li>Als Seitenstil (<var>pagestyle</var>) finde ich
+  <var>headings</var> gut, da im Seitenkopf das Kapitel und der
+  Abschnitt stehen. Ihr findet daher in der Vorlage die Zeile
+  <code>\pagestyle{headings}</code>.</li>
 
 <li>Ob das Skript mit Absatzeinzug geschrieben wird oder nicht, sollte an
   der Menge des Textes festgemacht werden. LaTeX braucht eine gewisse
@@ -23,59 +25,62 @@
   ist nicht möglich, wenn jeder Absatz nur aus zwei Sätzen besteht. In
   dem Fall sollte der Absatzeinzug entfallen und dafür ein Abstand
   zwischen den Absätzen gemacht werden. Dies wird mit der Klassenoption
-  <tt>halfparskip*</tt> erreicht.
+  <var>halfparskip*</var> erreicht.
 
-<li>Für Sätze, Beispiele, Bemerkungen u.ä. hat sich <tt>ntheorem</tt> als sehr
-  brauchbar erwiesen.
+<li>Für Sätze, Beispiele, Bemerkungen u.ä. hat sich das Paket <a
+  href="http://user.informatik.uni-goettingen.de/~may/Ntheorem/">ntheorem</a>
+  als sehr brauchbar erwiesen.</li>
 
-  <a href='http://user.informatik.uni-goettingen.de/~may/Ntheorem/'>
-  http://user.informatik.uni-goettingen.de/~may/Ntheorem/</a>
+<li>Für mathematische Belange hat sich das Paket AMSMath als sehr gut
+  erwiesen. Weiterhin setzen wir in der Vorlage das Paket onlyamsmath
+  ein. Das prüft, ob wirklich eventuell Befehle aus Plain TeX oder
+  veraltete Mathe-Befehle verwendet werden.</li>
 
-  Es ist auch möglich, sich die Dateien unter
-  http://www.minet.uni-jena.de/~joergs/skripte/sty/ in die Arbeitskopie
-  des Skripts zu kopieren. Vorsicht: Diese nicht mit in das Repository
-  aufnehmen!</li>
+<li>Als Algorithmenumgebung wird <a
+  href="http://www.ctan.org/tex-archive/macros/latex/contrib/algorithms/">algorithm</a>
+  und <a
+  href="http://www.ctan.org/tex-archive/macros/latex/contrib/algorithmic/">algorithmic</a>
+  verwendet.</li>
 
-<li>Für mathematische Belange hat sich <tt>amsmath</tt> als sehr gut erwiesen.</li>
+<li>Bilder sollten mit den Programmen XFig (mit
+  <var>-specialtext</var> kann direkt LaTeX erzeugt werden), Gnuplot,
+  TCM oder anderen vektororientierten Programmen erstellt werden. Mit
+  Ti<i>k</i>Z kann auf einfache Weise direkt in LaTeX
+  <q>gezeichnet</q> werden. Ist dies nicht möglich oder sinnvoll, dann
+  sollte <abbr title="Portable Network Graphics">PNG</abbr>
+  oder JPG als Format gewählt werden. PDFLaTeX kann keine
+  Postscript-Dateien einbinden!<br />
 
-<li>Als Algorithmenumgebung wird <tt>algorithm</tt> und <tt>algorithmic</tt> verwendet.
-  Zu Finden sind diese beiden Pakete unter:
+  Legt immer die Originaldateien der Programme mit ins Archiv! Wenn
+  Änderungen anstehen sollten, macht es das einem anderem Bearbeiter
+  einfacher.<br />
 
-  <a href='http://www.ctan.org/tex-archive/macros/latex/contrib/algorithms/'>
-  http://www.ctan.org/tex-archive/macros/latex/contrib/algorithms/</a></li>
+  <em>ACHTUNG</em>: Zur Erstellung von combined pdf/latex Bildern
+  bitte auf die Version achten. Es hat sich ergeben, daß die
+  PDF-Anteile der Bilder um 90° verdreht werden, wenn man mit
+  XFig-Version &lt; 3.2.5 arbeitet.</li>
 
-<li>Bilder sollten mit <tt>xfig</tt> (mit -specialtext kann direkt LaTeX erzeugt
-  werden), <tt>gnuplot</tt> oder <tt>tcm</tt> oder anderen vektororientierten Programmen
-  erstellt werden. Ist dies nicht möglich oder sinnvoll, dann sollte <tt>png</tt>
-  oder <tt>jepg</tt> als Format gewählt werden. pdflatex kann keine ps- oder
-  eps-Dateien einbinden!<br>
-
-  Immer die Originaldateien der Programme mit ins Archiv legen!<br>
-
-  ACHTUNG: Zur Erstellung von combined pdf/latex Bildern bitte auf die Version
-  achten. Es hat sich ergeben, daß die pdf-Anteile der Bilder um 90° verdreht
-  werden, wenn man mit xfig-Version &lt; 3.2.5 arbeitet.</li>
-
-<li><a name="beispielskript"></a>Jedes Dokument <b>muss</b> eine Erklärung über die Verwendbarkeit des
-  Dokuments (Lizenz) und Möglichkeiten zur Kontaktaufnahme beinhalten. Als
-  Vorlage dafür kann das Vorwort aus dem
-  <a href="http://svn.lug-jena.de/uni-skripte/vorlage/skript.ltx?view=markup">Beispielskript</a>
+  <li><a name="beispielskript"></a>Jedes Dokument <b>muss</b> eine
+  Erklärung über die Verwendbarkeit des Dokuments (Lizenz) und
+  Möglichkeiten zur Kontaktaufnahme beinhalten. Als Vorlage dafür kann
+  das Vorwort aus dem <a
+  href="http://svn.lug-jena.de/uni-skripte/vorlage/skript.ltx?view=markup">Beispielskript</a>
   verwendet werden.</li>
 
 <li>Da regelmäßig Ausgaben der Dokumente erstellt werden, sollte an einer
-  Stelle im Dokument die Version des Dokuments (<tt>$LastChangedRevision$</tt>)
-  und das Datum (<tt>$LastChangedDate$</tt>) der letzten Änderung verwerkt
+  Stelle im Dokument die Version des Dokuments (<code>$LastChangedRevision$</code>)
+  und das Datum (<code>$LastChangedDate$</code>) der letzten Änderung vermerkt
   werden. Dies ist zum Beispiel im Vorwort des
   <a href="http://svn.lug-jena.de/uni-skripte/vorlage/skript.ltx?view=markup">Beispielskripts</a>
   umgesetzt. Dafür hat sich
   das Paket <tt>svn</tt> als praktisch erwiesen. Zusätzlich muss mit svn die
   Ersetzung der Schlüsselwörter aktiviert werden:
 
-  <pre>svn propset svn:keywords "LastChangedRevision LastChangedDate" skript.ltx</pre></li>
+  <pre><kbd>svn propset svn:keywords "LastChangedRevision LastChangedDate" skript.ltx</kbd></pre></li>
 
 <li>Es sollten nur die langen Formen der Keywords verwendet werden, da es
   unwahrscheinlicher ist, dass diese Zeichenketten in dem Dokument
-  auftreten, als <tt>$Rev$</tt> oder <tt>$Date$</tt>.</li>
+  auftreten, als <code>$Rev$</code> oder <code>$Date$</code>.</li>
 
   <li>Eine Vorlage für ein neues Skript befindet sich im
     <a href="http://svn.lug-jena.de/uni-skripte/vorlage/">SVN‐Verzeichnis
