--- a/web/index.html
+++ b/web/index.html
@@ -128,7 +128,7 @@ Dokument bald komplett fehlerfrei. :-)</p>
     Internet zu finden sind. Das Netz lebt davon, dass es Informationen
     bekommt. Daher finde ich es auch immer schade, wenn Dozenten ein Skript zu
     ihrer Vorlesung haben, dieses aber nicht veröffentlichen. Das sind alles
-    verlohrene Informationen, weil keiner (außerhalb der Vorlesung) davon
+    verlorene Informationen, weil keiner (außerhalb der Vorlesung) davon
     etwas mitbekommt oder die Informationen nutzen könnte.
   </li>
   <li>
