skripte: HTTP‐Parameter id bei Verweis auf windows.html setzen
Mir ist durch Zufall im Log aufgefallen, dass in skripte.html in dem
Verweis auf windows.html für ein konkretes Skript der Parameter id nicht
gesetzt wird, sondern der Skriptname einfach nur so als Parameter
mitgegeben wird. Daher wurde dann auf der Seite immer die allgemeine
Beschreibung angezeigt.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2956 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/skripte.html
+++ b/web/skripte.html
@@ -78,7 +78,7 @@ Eigene Änderungen können mit dem folgenden Befehl auf den Server übertragen w
 <tal:text condition="script_id_given">
   <p>
     Die Windowsanleitung ist
-    <a tal:attributes="href string:windows.html?${script_id}">hier.</a>
+    <a tal:attributes="href string:windows.html?id=${script_id}">hier.</a>
   </p>
 
   <h2>Übersetzte Versionen</h2>
