--- a/web/mail.html
+++ b/web/mail.html
@@ -12,8 +12,10 @@ body = query_params.get('body')
 if body:
     body = body[0]
 
+valid_body = body and body != ''
+
 email_send = False
-if body and body != '' and script_id and script_id != '':
+if valid_body and script_id and script_id != '':
     from email import Message, Charset
     mail = Message.Message()
     mail['To'] = mail_to
@@ -45,6 +47,7 @@ if body and body != '' and script_id and script_id != '':
   Id: <pre tal:content="script_id" />
   body: <pre tal:content="body" />
   email_send: <pre tal:content="email_send" />
+  valid_body: <pre tal:content="valid_body" />
 </tal:verbose>
 
 <tal:send condition="email_send">
@@ -54,7 +57,14 @@ if body and body != '' and script_id and script_id != '':
   sein. Vielen Dank für die Unterstützung.
 </tal:send>
 <tal:notsend condition="not:email_send">
+<tal:vbody condition="valid_body">
   Es gab Probleme beim Versand. Bitte wenden Sie sich per E-Mail an die
   Mailingliste
   <a href="mailto:uni-skripte@lug-jena.de">uni-skripte@lug-jena.de</a>.
+</tal:vbody>
+<tal:invbody condition="not:valid_body">
+  Die Nachricht enthielt keinen Text. <b>Daher wurde nichts verschickt.</b> Bitte
+  wenden Sie sich per E-Mail an die Mailingliste
+  <a href="mailto:uni-skripte@lug-jena.de">uni-skripte@lug-jena.de</a>.
+</tal:invbody>
 </tal:notsend>
