web/mail: Texte mit http:// nicht annehmen
Es gibt viele Bots, die glauben, das Formular sei für ein Gästebuch, in
das sie ihre Werbung abladen können. Diese enthält immer eine URL.
Normale Mitteilungen an uns müssen keine URL enthalten, weshalb wir diese
Nachrichten getrost zurückweisen können – es bleibt ja immer noch die
E‐Mail zum Kontakt.

Mit dieser Erweiterung des Tests hat sich das Spamaufkommen für den
Listenmoderator in den letzten Wochen bis auf Null reduziert.

git-svn-id: https://svn.lug-jena.de/uni-skripte@3069 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/mail.html
+++ b/web/mail.html
@@ -12,7 +12,7 @@ body = query_params.get('body')
 if body:
     body = body[0]
 
-valid_body = body and body != ''
+valid_body = body and body != '' and body.find('http://') == -1
 
 email_send = False
 if valid_body and script_id and script_id != '':
@@ -63,7 +63,8 @@ if valid_body and script_id and script_id != '':
   <a href="mailto:uni-skripte@lug-jena.de">uni-skripte@lug-jena.de</a>.
 </tal:vbody>
 <tal:invbody condition="not:valid_body">
-  Die Nachricht enthielt keinen Text. <b>Daher wurde nichts verschickt.</b> Bitte
+  Die Nachricht enthielt keinen Text oder im Text war
+  <code>http://</code> enthalten. <b>Daher wurde nichts verschickt.</b> Bitte
   wenden Sie sich per E-Mail an die Mailingliste
   <a href="mailto:uni-skripte@lug-jena.de">uni-skripte@lug-jena.de</a>.
 </tal:invbody>
