--- a/web/skripte.html
+++ b/web/skripte.html
@@ -116,11 +116,11 @@ Eigene Änderungen können mit dem folgenden Befehl auf den Server übertragen w
   <h2>Die aktuellen Quellen</h2>
   <ul>
     <li>
-      <a tal:attributes="href string:http://svn.lug-jena.de/uni-skripte/${script_id}.tar.gz?view=tar"
+      <a tal:attributes="href string:http://svn.lug-jena.de/${script_id}.tar.gz?view=tar&root=uni-skripte"
         >Tarball direkt aus dem SVN</a>
     </li>
     <li>
-      <a tal:attributes="href string:http://svn.lug-jena.de/uni-skripte/${script_id}/"
+      <a tal:attributes="href string:http://svn.lug-jena.de/${script_id}/?root=uni-skripte"
         >SVN‐Eintrag</a>
     </li>
     <li tal:condition="exists:file_link/mgtgz"
@@ -135,7 +135,7 @@ Eigene Änderungen können mit dem folgenden Befehl auf den Server übertragen w
   <pre tal:condition="exists:changelog" tal:content="changelog" />
   <p>
     Eine
-    <a tal:attributes="href string:http://svn.lug-jena.de/uni-skripte/${script_id}/"
+    <a tal:attributes="href string:http://svn.lug-jena.de/${script_id}/?root=uni-skripte"
       >Liste mit allen Änderungen</a> kann im SVN für die jeweiligen
     Dateien eingesehen werden.
   </p>
